--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,13 @@
         "wp-coding-standards/wpcs": "^2.2",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.6.2",
         "phpcompatibility/phpcompatibility-wp": "*"
-    }
+    },
+    "scripts": {
+        "phpunit" : "./vendor/bin/phpunit",
+        "phpcs" : "./vendor/bin/phpcs -s .",
+        "test": [
+          "@phpunit",
+          "@phpcs"
+        ]
+      }
 }
