--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require-dev": {
         "wp-coding-standards/wpcs": "^2.2",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.6.2",
-        "phpcompatibility/phpcompatibility-wp": "*"
+        "phpcompatibility/phpcompatibility-wp": "*",
+        "phpunit/phpunit": "^7"
     },
     "scripts": {
         "phpunit" : "./vendor/bin/phpunit",
