--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,6 +22,9 @@ jobs:
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
+    
+    - name: Install tests
+      run: bash bin/install-wp-tests.sh wordpress_test root root localhost
 
     - name: Run test suite
       run: composer run-script phpcs
