--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -24,7 +24,7 @@ jobs:
     # Docs: https://getcomposer.org/doc/articles/scripts.md
     
     - name: Install tests
-      run: bash bin/install-wp-tests.sh wordpress_test root root localhost
+      run: bash bin/install-wp-tests.sh wordpress_test root root 127.0.0.1
 
     - name: Run test suite
       run: composer run-script phpcs
