--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -23,6 +23,9 @@ jobs:
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
     
+    - name: Start MySQL
+      run: sudo /etc/init.d/mysql start
+      
     - name: Install tests
       run: bash bin/install-wp-tests.sh wordpress_test root root 127.0.0.1
 
