--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,4 +30,4 @@ jobs:
       run: bash bin/install-wp-tests.sh wordpress_test root root 127.0.0.1
 
     - name: Run test suite
-      run: composer run-script phpcs
+      run: composer run-script test
