--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -20,14 +20,14 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
 
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-    
+    - name: Lint
+      run: composer run-script phpcs
+      
     - name: Start MySQL
       run: sudo /etc/init.d/mysql start
       
-    - name: Install tests
+    - name: Install WordPress test environment
       run: bash bin/install-wp-tests.sh wordpress_test root root 127.0.0.1
 
-    - name: Run test suite
-      run: composer run-script test
+    - name: Test
+      run: composer run-script phpunit
